# test-mesonpy-vsenv

./: .gitignore  .gitmodules  README.md  meson.build  pixi.toml  pyproject.toml
.github/workflows/: msvc-build.yml
testpkg/: __init__.py  module.c
tests/: test_module.py
